[gd_scene load_steps=20 format=2]

[ext_resource path="res://Low_Poly_Barn.tscn" type="PackedScene" id=1]
[ext_resource path="res://CratePickable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tree_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://CheeseWheel.tscn" type="PackedScene" id=7]
[ext_resource path="res://PlayerMovement.tscn" type="PackedScene" id=8]
[ext_resource path="res://MILK_carton.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Crate_3/Crate3.DAE" type="PackedScene" id=13]
[ext_resource path="res://CheesePickable.tscn" type="PackedScene" id=14]
[ext_resource path="res://ButterPickup.tscn" type="PackedScene" id=15]
[ext_resource path="res://CartonPickup.tscn" type="PackedScene" id=16]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 60, 2, 60 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.027451, 0.670588, 0.145098, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.271992, 0.091302, 0.215359 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.0392225, 4.73095, 0.507218 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.390853, 4.98444, 0.0232516 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.386916, 0.439373, 0.524336 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.03453, 5.40215, 0.0408825 )

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="Ground" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 60, 0, 0, 0, 0, 0, 0, 0, 60, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.018, -1, 2.974 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.695512, 0.718515, 0, -0.718515, 0.695512, 3.57518, 83.6443, 23.2288 )
shadow_enabled = true

[node name="MILK_carton" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0.52415 )

[node name="RealCheese2" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="Tree_1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.6511, 0, 0 )

[node name="Crate3" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.41298, -0.0357646, 7.527 )

[node name="Area" type="Area" parent="Crate3"]
transform = Transform( 0.6, 0, 0, 0, 1, 0, 0, 0, 1, 0.120934, 0, -0.129872 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Crate3/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0342276, 0.07049, 0 )
shape = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="Crate3"]
transform = Transform( 0.5, 0, 0, 0, 0.02128, 0, 0, 0, 0.5, 0.0962911, 0.152437, -0.13863 )
collision_mask = 2147483654

[node name="wall1" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25987, 0.457761, 0 )
shape = SubResource( 5 )

[node name="wall2" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.451526, 0.325333, 0 )
shape = SubResource( 5 )

[node name="wall3" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0912976, 0.402903, 0.517243 )
shape = SubResource( 6 )

[node name="wall4" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0912976, 0.402903, -0.510984 )
shape = SubResource( 6 )

[node name="floor" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0983904, -4.79696, 0 )
shape = SubResource( 7 )

[node name="support1" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.416469, 0.348022, -0.462385 )
shape = SubResource( 8 )

[node name="support2" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.416469, 0.348022, 0.460121 )
shape = SubResource( 8 )

[node name="support3" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216071, 0.348022, 0.457865 )
shape = SubResource( 8 )

[node name="support4" type="CollisionShape" parent="Crate3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.225119, 0.348022, -0.462385 )
shape = SubResource( 8 )

[node name="CheesePickable" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.57352 )

[node name="CartonPickup" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.29841 )

[node name="ButterPickup" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54853, 0.0957313, 1.62528 )

[node name="PlayerMovement" parent="." instance=ExtResource( 8 )]

[node name="Low_Poly_Barn" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.0639729, 0, -1.99898, 0, 2, 0, 1.99898, 0, -0.0639729, 4.00754, 0, -0.000114679 )

[node name="CratePickable" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.25089, 0.0278596, 6.18145 )
